1.returning the object to the client in the controllers. 2. added a commetn on possible deserialization incampitbaility for Python>3.7 in util.py. 3 removed the auth for node and topology APIs for testing
