# swagger_server/models/port.py
@@ -14,7 +14,7 @@ class Port(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, id: str=None, name: str=None, short_name: str=None, node: str=None, status: str=None):  # noqa: E501
+    def __init__(self, id: str=None, name: str=None, short_name: str=None, node: str=None, label_range: List[str]=None, status: str=None):  # noqa: E501
         """Port - a model defined in Swagger
 
         :param id: The id of this Port.  # noqa: E501
@@ -25,6 +25,8 @@ class Port(Model):
         :type short_name: str
         :param node: The node of this Port.  # noqa: E501
         :type node: str
+        :param label_range: The label_range of this Port.  # noqa: E501
+        :type label_range: List[str]
         :param status: The status of this Port.  # noqa: E501
         :type status: str
         """
@@ -33,6 +35,7 @@ class Port(Model):
             'name': str,
             'short_name': str,
             'node': str,
+            'label_range': List[str],
             'status': str
         }
 
@@ -41,12 +44,14 @@ class Port(Model):
             'name': 'name',
             'short_name': 'short_name',
             'node': 'node',
+            'label_range': 'label_range',
             'status': 'status'
         }
         self._id = id
         self._name = name
         self._short_name = short_name
         self._node = node
+        self._label_range = label_range
         self._status = status
 
     @classmethod
@@ -149,6 +154,27 @@ class Port(Model):
             raise ValueError("Invalid value for `node`, must not be `None`")  # noqa: E501
 
         self._node = node
+
+    @property
+    def label_range(self) -> List[str]:
+        """Gets the label_range of this Port.
+
+
+        :return: The label_range of this Port.
+        :rtype: List[str]
+        """
+        return self._label_range
+
+    @label_range.setter
+    def label_range(self, label_range: List[str]):
+        """Sets the label_range of this Port.
+
+
+        :param label_range: The label_range of this Port.
+        :type label_range: List[str]
+        """
+
+        self._label_range = label_range
 
     @property
     def status(self) -> str:
